--- a/README
+++ b/README
@@ -1,8 +1,12 @@
 1. border-box property
    позволяет значения padding и border вычитать из ширины и длины блока,
-   т.е. в нашем примере div останется с фиксированными параметрами, но для контента останется 60х60 px
+   т.е. в нашем примере div останется с фиксированными параметрами,
+   но для контента останется 60х60 px
 2. mixin ― пользовательские функции (rounded-corners, border-box)
-3. clearfix - помогает избавиться от несоответствий отображения элементов верстки в разных браузерах:
+3. clearfix - помогает избавиться от несоответствий отображения
+   элементов верстки в разных браузерах:
+
+   
    .clearfix:before,
    .clearfix:after {
        content: " ";
