--- a/README
+++ b/README
@@ -1,4 +1,8 @@
-Run sass command with: "npm run sass"
+1. Run command "npm install"
+2. Run sass command with: "npm run sass"
+
+
+
 
 1. border-box property
    позволяет значения padding и border вычитать из ширины и длины блока,
